Changing blinker text content, fixing responsiveness of profile text on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -332,6 +332,9 @@ p {
 	.experience-languages {
 		padding-bottom: 100px;
 	}
+	.profile-text {
+		padding-right: 0px;
+	}
 }
 
 @media only screen and (max-width: 550px) {
